--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
     </section>
   </main>
 
+  
   <footer class="site-footer">
-    <div class="container">
-      <small>Demo educativa inspirada en el layout de BSF Seeds. Reemplaza imágenes, textos y precios según tu contenido.</small>
+    <div class="container" id="footerDynamic">
+      <small class="muted">Selecciona una genética para ver su título aquí.</small>
     </div>
   </footer>
+
 
   <script src="js/app.js"></script>
   <script src="js/script.js"></script>
