--- a/index.html
+++ b/index.html
@@ -54,5 +54,8 @@
 
   <script src="js/app.js"></script>
   <script src="js/script.js"></script>
+  <a href="https://wa.me/56998118816" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
+    <img src="img/whatsapp-icon.png" alt="WhatsApp" />
+  </a>
 </body>
 </html>
