--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="site-title">Variedades Campeonas</h1>
+      <h1 class="site-title">Semillas De Coleccion</h1>
       <p class="site-subtitle">Catálogo simple con carrusel, títulos, subtítulos y precio</p>
     </div>
   </header>
@@ -20,7 +20,7 @@
   <main>
     <section class="carousel-section">
       <div class="container">
-        <h2 class="section-title">Nuestras Genéticas</h2>
+        <h2 class="section-title">Genéticas Para Exterior</h2>
         <div class="controls">
           <button id="prevBtn" class="ctrl" aria-label="Anterior">‹</button>
           <button id="nextBtn" class="ctrl" aria-label="Siguiente">›</button>
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="container">
-        <p class="hint">Desliza con el dedo o con la rueda del mouse, o usa los botones.</p>
+        <p class="hint">Las semillas se encuentran en Blister Cerrados.</p>
       </div>
     </section>
 
@@ -45,7 +45,7 @@
 
       <div class="container">
         <article id="specsCard" class="specs-card">
-          <small class="muted">Toca una tarjeta del carrusel para ver sus detalles.</small>
+          <small class="muted">Toca Cualquier Genetica para ver sus detalles.</small>
         </article>
       </div>
 
