--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <header class="site-header">
     <div class="container">
       <h1 class="site-title">Semillas de Coleccion</h1>
+
+      <div class="inase-logo" aria-label="INASE">
+        <img src="img/inase_hd.jpg" alt="INASE — Instituto Nacional de Semillas" />
+      </div>
 <p class="site-subtitle">Semillas Registradas - Instituto Nacional de Semillas (INASE)</p>
     </div>
   </header>
