--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
     <div class="container">
       <h1 class="site-title">Semillas de Coleccion</h1>
 
+      
       <div class="inase-logo" aria-label="INASE">
-        <img src="img/inase_hd.jpg" alt="INASE — Instituto Nacional de Semillas" />
+        <picture>
+          <source type="image/webp"
+            srcset="img/inase_hd-220.webp 220w, img/inase_hd-320.webp 320w, img/inase_hd-480.webp 480w"
+            sizes="(max-width:480px) 52vw, (max-width:768px) 34vw, 420px">
+          <img
+            src="img/inase_hd-320.jpg"
+            srcset="img/inase_hd-220.jpg 220w, img/inase_hd-320.jpg 320w, img/inase_hd-480.jpg 480w"
+            sizes="(max-width:480px) 52vw, (max-width:768px) 34vw, 420px"
+            alt="INASE — Instituto Nacional de Semillas"
+            decoding="async" loading="lazy" />
+        </picture>
       </div>
+
 <p class="site-subtitle">Semillas Registradas - Instituto Nacional de Semillas (INASE)</p>
     </div>
   </header>
