--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main>
     <section class="carousel-section">
       <div class="container row-between">
-        <h2 class="section-title">Genéticas Para Exterior</h2>
+        <h2 class="section-title exterior">Genética para exterior</h2>
         <div class="controls">
           <button class="ctrl" id="prevBtn" aria-label="Anterior">‹</button>
           <button class="ctrl" id="nextBtn" aria-label="Siguiente">›</button>
