--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@
       <small class="muted">Selecciona una genética para ver sus detalles Aqui.</small>
     </div>
   </footer>
-
-
-  <script src="js/app.js"></script>
+<script src="js/products.js"></script>
+<script src="js/app.min.js"></script>
   <script src="js/script.js"></script>
   <a href="https://wa.me/56998118816" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
-    <img src="img/whatsapp-icon.png" alt="WhatsApp" />
+    <img src="img/whatsapp-icon.png" alt="WhatsApp" / loading="lazy">
   </a>
 </body>
 </html>
