--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
     
-    <section class="specs-section" id="specs">
+    <section class="specs-section" id="specs" role="region" aria-labelledby="specName">
       <div class="container">
         <h3 class="specs-title">Especificaciones</h3>
         <h4 id="specName" class="specs-name">Selecciona una genética</h4>
