--- a/index.html
+++ b/index.html
@@ -76,13 +76,10 @@
       <small class="muted">Selecciona una genética para ver sus detalles Aqui.</small>
     </div>
   </footer>
-<script src="js/products.js"></script>
-<script src="js/app.min.js"></script>
-  <script src="js/script.js"></script>
+<script src="js/products.js" defer></script>
   <a href="https://wa.me/56998118816" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
     <img src="img/whatsapp-icon.png" alt="WhatsApp" / loading="lazy">
   </a>
-  <script src="js/fix-cards.js"></script>
-  <script src="js/data-driver.js"></script>
+  <script src="js/data-driver.js" defer></script>
 </body>
 </html>
