--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-  <header class="site-header">
+  <header class="site-header" style="background: url('img/header-bg.png') no-repeat center center; background-size: cover; padding: 40px 0; text-align: center;">
     <div class="container">
       <h1 class="site-title">Semillas de Coleccion</h1>
 
