--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </ul>
       </div>
       <div class="menu-group">
-        <h3>Feminizadas</h3>
+        <h3>Genéticas</h3>
         <ul class="menu-list">
-          <li><a href="#cuadro1" class="menu-link">Ir al grupo</a></li>
+          <li><a href="#cuadro1" class="menu-link">Feminizadas</a></li>
         </ul>
       </div>
     </div>
