--- a/index.html
+++ b/index.html
@@ -73,6 +73,25 @@
       <p class="hint container">Las Semillas se encuentran en Blister Cerrados.</p>
     </section>
 
+    <!-- === CUADRO 2 (Genética para interior) === -->
+    <section id="cuadro2" class="carousel-section">
+      <div class="container row-between">
+        <h2 class="section-title exterior">Genética para interior</h2>
+        <div class="controls">
+          <button class="ctrl" id="prevBtn2" aria-label="Anterior">‹</button>
+          <button class="ctrl" id="nextBtn2" aria-label="Siguiente">›</button>
+        </div>
+      </div>
+
+      <div class="carousel-wrapper">
+        <div class="carousel" id="carousel2" aria-label="Listado de productos" role="list">
+          <!-- Las tarjetas se inyectan desde JS usando la lista DATA -->
+        </div>
+      </div>
+      <p class="hint container">Las Semillas se encuentran en Blister Cerrados.</p>
+    </section>
+
+
     
     <section class="specs-section" id="specs" role="region" aria-labelledby="specName">
       <div class="container">
