--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
     </div>
   </nav>
 
-  <header class="site-header" style="background: url('img/logo.png') no-repeat center center; background-size: cover; padding: 40px 0; text-align: center;">
-  <div class="site-logo-wrap"><img class="site-logo" src="img/logo.png" alt="Logo"></div>
-
-    <div class="container">
+  <header class="site-header logo-bg-only" style="background: url('img/logo.png') no-repeat center center; background-size: cover; padding: 40px 0; text-align: center;"><div class="container">
       
 
       
