--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </nav>
 
-  <header class="site-header logo-bg-only" style="background: url('img/logo.png') no-repeat center center; background-size: cover; padding: 40px 0; text-align: center;"><div class="container">
+  <header class="site-header logo-bg-only logo-bg-only" style="background: url('img/logo.png') no-repeat center center; background-size: cover; padding: 40px 0; text-align: center;"><div class="container">
       
 
       
@@ -113,7 +113,7 @@
   </footer>
 <script src="js/products.js" defer></script>
   <a href="https://wa.me/56998118816" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
-    <img src="img/whatsapp-icon.png" alt="WhatsApp" / loading="lazy">
+    <img class="whatsapp-icon" src="img/whatsapp-icon.svg" alt="WhatsApp">
   </a>
   <script src="js/data-driver.js" defer></script>
 
