--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <script>window.__VER=Date.now();</script>
 </head>
 <body>
+<header class="site-header">
+  <div class="header-inner">
+    <img class="site-logo" src="img/logo.png" alt="Nova Seeds logo">
+  </div>
+</header>
+
 
   <button class="menu-toggle" aria-expanded="false" aria-controls="siteMenu" aria-label="Abrir menú">☰</button>
   <nav id="siteMenu" class="site-menu" hidden>
@@ -33,9 +39,7 @@
     </div>
   </nav>
 
-  <header class="site-header logo-bg-only logo-bg-only" style="background: center/contain no-repeat url('img/logo.png'); padding: 40px 0; text-align: center;"><div class="container">
-</div>
-  </header>
+  
 
   <main>
     <section id="cuadro1" class="carousel-section">
