--- a/index.html
+++ b/index.html
@@ -1,116 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-  <meta name="description" content="Listado de genéticas con especificaciones y galería de imágenes.">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Variedades Campeonas | Demo</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" />
-<script>window.__VER=Date.now();</script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Nueva Página - Carruseles</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="theme-dark">
 <header class="site-header">
   <div class="header-inner">
-    <img class="site-logo" src="img/logo.png" alt="Nova Seeds logo">
+    <img class="site-logo" src="img/logo.png" alt="logo" onerror="this.style.display='none'">
   </div>
 </header>
 
-
-  <button class="menu-toggle" aria-expanded="false" aria-controls="siteMenu" aria-label="Abrir menú">☰</button>
-  <nav id="siteMenu" class="site-menu" hidden>
-    <div class="menu-inner">
-      <div class="menu-group">
-        <h3>Estilo</h3>
-        <ul class="menu-list">
-          <li><button class="theme-btn" data-theme="color1">Color1 (oscuro)</button></li>
-          <li><button class="theme-btn" data-theme="color2">Color2 (oscuro)</button></li>
-          <li><button class="theme-btn" data-theme="color3">Color3 (claro)</button></li>
-          <li><button class="theme-btn" data-theme="color4">Color4 (claro)</button></li>
-        </ul>
-      </div>
-      <div class="menu-group">
-        <h3>Genéticas</h3>
-        <ul class="menu-list">
-          <li><a href="#cuadro1" class="menu-link">Feminizadas</a></li>
-        </ul>
-      </div>
+<main>
+  <section id="cuadro1" class="carousel-section theme-a">
+    <div class="section-head">
+      <h2>Genéticas interior</h2>
+      <div class="controls"><button id="prevBtn" aria-label="Anterior">‹</button><button id="nextBtn" aria-label="Siguiente">›</button></div>
     </div>
-  </nav>
+    <div id="carousel" class="carousel" aria-label="Carrusel interior"></div>
+  </section>
 
-  
-
-  <main>
-    <section id="cuadro1" class="carousel-section">
-      <div class="container row-between">
-        <h2 class="section-title exterior">Genética para exterior</h2>
-        <div class="controls">
-          <button class="ctrl" id="prevBtn" aria-label="Anterior">‹</button>
-          <button class="ctrl" id="nextBtn" aria-label="Siguiente">›</button>
-        </div>
-      </div>
-
-      <div class="carousel-wrapper">
-        <div class="carousel" id="carousel" aria-label="Listado de productos" role="list">
-          <!-- Las tarjetas se inyectan desde JS usando la lista DATA -->
-        </div>
-      </div>
-      <p class="hint container">Las Semillas se encuentran en Blister Cerrados.</p>
-    </section>
-
-    <!-- === CUADRO 2 (Genética para interior) === -->
-    <section id="cuadro2" class="carousel-section">
-      <div class="container row-between">
-        <h2 class="section-title exterior">Genética para interior</h2>
-        <div class="controls">
-          <button class="ctrl" id="prevBtn2" aria-label="Anterior">‹</button>
-          <button class="ctrl" id="nextBtn2" aria-label="Siguiente">›</button>
-        </div>
-      </div>
-
-      <div class="carousel-wrapper">
-        <div class="carousel" id="carousel2" aria-label="Listado de productos" role="list">
-          <!-- Las tarjetas se inyectan desde JS usando la lista DATA -->
-        </div>
-      </div>
-      <p class="hint container">Las Semillas se encuentran en Blister Cerrados.</p>
-    </section>
-
-
-    
-    <section class="specs-section" id="specs" role="region" aria-labelledby="specName">
-      <div class="container">
-        <h3 class="specs-title">Especificaciones</h3>
-        <h4 id="specName" class="specs-name">Selecciona una genética</h4>
-      </div>
-
-      <div class="container">
-        <article class="specs-card" id="specsCard">
-          <p class="muted">Selecciona cualquier genética para ver las especificaciones aquí abajo.</p>
-        </article>
-      </div>
-
-      <!-- Galería vertical borde a borde (debajo del nombre verde) -->
-      <div id="specsGallery" class="specs-gallery edge-to-edge"></div>
-    </section>
-
-  
-  <section id="techSheet"></section>
+  <section id="cuadro2" class="carousel-section theme-b">
+    <div class="section-head">
+      <h2>Genéticas exterior</h2>
+      <div class="controls"><button id="prevBtn2" aria-label="Anterior">‹</button><button id="nextBtn2" aria-label="Siguiente">›</button></div>
+    </div>
+    <div id="carousel2" class="carousel" aria-label="Carrusel exterior"></div>
+  </section>
 </main>
 
-  
-  <footer class="site-footer">
-    <div class="container" id="footerDynamic">
-      <small class="muted">Selecciona una genética para ver sus detalles Aqui.</small>
-    </div>
-  </footer>
-<script src="js/products.js" defer></script>
-  <a href="https://wa.me/56998118816" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
-    <img class="whatsapp-icon" src="img/whatsapp-icon.svg" alt="WhatsApp">
-  </a>
-  <script src="js/data-driver.js" defer></script>
+<!-- modal gallery -->
+<div id="lightbox" class="lightbox" aria-hidden="true">
+  <div class="lb-inner">
+    <button id="lb-close" class="lb-close" aria-label="Cerrar">×</button>
+    <img id="lb-img" src="" alt="">
+    <div id="lb-thumbs" class="lb-thumbs"></div>
+  </div>
+</div>
 
-  <script src="js/theme-selector.js" defer></script>
+<script src="js/app.js"></script>
 </body>
 </html>
