--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div id="lb-thumbs" class="lb-thumbs"></div>
     <div id="lb-ficha" class="lb-ficha" hidden>
       <h3 class="lb-ficha-title">Ficha técnica</h3>
+      <div id="lb-ficha-name" class="lb-ficha-name"></div>
       <div id="lb-ficha-grid" class="lb-ficha-grid"></div>
     </div>
   </div>
