--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   <div class="specs-box">
     <div class="specs-empty">Selecciona cualquier genética para ver las especificaciones aquí abajo.</div>
     <div class="specs-content" hidden>
-      <div id="specs-grid" class="specs-grid"></div>
+      <div id="specs-tabs" class="specs-tabs" hidden></div>
+    <div id="specs-panels" class="specs-panels" hidden></div>
+    <div id="specs-grid" class="specs-grid"></div>
       <h3 id="specs-title"></h3>
       <div class="specs-row"><span class="k">Genética</span><span id="specs-gen"></span></div>
       <div class="specs-row"><span class="k">Precio</span><span id="specs-price"></span></div>
