--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
   <div class="specs-box">
     <div class="specs-empty">Selecciona cualquier genética para ver las especificaciones aquí abajo.</div>
     <div class="specs-content" hidden>
-      <div id="specs-tabs" class="specs-tabs" hidden></div>
-    <div id="specs-panels" class="specs-panels" hidden></div>
-    <div id="specs-grid" class="specs-grid"></div>
+      <div id="specs-grid" class="specs-grid"></div>
       <h3 id="specs-title"></h3>
       <div class="specs-row"><span class="k">Genética</span><span id="specs-gen"></span></div>
       <div class="specs-row"><span class="k">Precio</span><span id="specs-price"></span></div>
@@ -56,7 +54,10 @@
     <button id="lb-close" class="lb-close" aria-label="Cerrar">×</button>
     <img id="lb-img" src="" alt="">
     <div id="lb-thumbs" class="lb-thumbs"></div>
-<div id="lb-ficha-grid" class="lb-ficha-grid"></div>
+    <div id="lb-ficha-fixed" class="lb-ficha-fixed" hidden>
+      <h3 class="lb-ficha-title">Ficha técnica</h3>
+      <div id="lb-ficha-name" class="lb-ficha-name"></div>
+      <div id="lb-ficha-grid" class="lb-ficha-grid"></div>
     </div>
   </div>
 </div>
