--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <main>
   <section id="cuadro1" class="carousel-section theme-a">
     <div class="section-head">
-      <h2>Genéticas interior</h2>
+      <h2 class="section-title brand">Genéticas Interior</h2>
       <div class="controls"><button id="prevBtn" aria-label="Anterior">‹</button><button id="nextBtn" aria-label="Siguiente">›</button></div>
     </div>
     <div id="carousel" class="carousel" aria-label="Carrusel interior"></div>
@@ -34,7 +34,7 @@
 
   <section id="cuadro2" class="carousel-section theme-b">
     <div class="section-head">
-      <h2>Genéticas exterior</h2>
+      <h2 class="section-title brand">Genéticas Exterior</h2>
       <div class="controls"><button id="prevBtn2" aria-label="Anterior">‹</button><button id="nextBtn2" aria-label="Siguiente">›</button></div>
     </div>
     <div id="carousel2" class="carousel" aria-label="Carrusel exterior"></div>
