--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
 </div>
 
 <script src="js/app.js"></script>
+
+<!-- WhatsApp Floating Button -->
+<a id="wa-fab" class="wa-fab" href="https://wa.me/5491100000000?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." target="_blank" rel="noopener" aria-label="WhatsApp"></a>
+
 </body>
 </html>
