--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Nueva Página - Carruseles</title>
+<title>NOVA Seeds - Semillas De Colección</title>
 <link rel="stylesheet" href="css/styles.css">
 
   <link rel="stylesheet" href="css/banner.css"></head>
