--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <header class="site-header">
   <div class="header-inner">
     <img class="site-logo" src="img/logo.png" alt="logo" onerror="this.style.display='none'">
-  </div>
+  <div id="promo-banner" class="promo-banner">4 Semillas AutoRegular Gratis llevando cualquier blister</div>
+</div>
 </header>
 
 <main>
