--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <div class="header-inner">
     <img class="site-logo" src="img/logo.png" alt="logo" onerror="this.style.display='none'">
   <div id="promo-banner" class="promo-banner">4 Semillas AutoRegular Gratis llevando cualquier blister</div>
+    <div class="seed-bonus-strip" aria-label="semillas de regalo">
+      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-1">
+      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-2">
+      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-3">
+      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-4">
+    </div>
 </div>
 </header>
 
@@ -28,11 +34,15 @@
 
   <section id="cuadro2" class="carousel-section theme-b">
     <div class="section-head">
-      <h2 class="section-title brand">Genéticas Exterior</h2>
+      <h2 class="section-title brand">Genetica Autofloreciente</h2>
       <div class="controls"><button id="prevBtn2" aria-label="Anterior">‹</button><button id="nextBtn2" aria-label="Siguiente">›</button></div>
     </div>
     <div id="carousel2" class="carousel" aria-label="Carrusel exterior"></div>
   </section>
+  <div class="background-banner">
+  <img src="img/fondo-germinacion.jpg" alt="Fondo germinación" class="background-banner-img">
+  <a href="#" class="bg-banner-cta" aria-label="Ir a guía">Clic Aquí</a>
+</div>
 </main>
 
 <!-- modal gallery -->
