--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="theme-color" content="#000000">
+<meta name="description" content="Semillas de colección en blister. Variedades autoflorecientes. Consultas y pedidos por WhatsApp. Envíos a todo el país.">
 <title>NOVA Seeds - Semillas De Colección</title>
 <link rel="stylesheet" href="css/styles.css">
-
-  <link rel="stylesheet" href="css/banner.css"></head>
+<link rel="stylesheet" href="css/banner.css">
+<link rel="preload" href="img/logo.png" as="image" fetchpriority="high">
+</head>
 <body class="theme-dark">
 <!-- Banner superior -->
 <div class="top-banner" role="region" aria-label="información de envíos">
   <div class="top-banner__track">
-    <img src="img/Banner.jpg?v=9" alt="Andreani - Envíos a todo el país">
-    <img src="img/Banner.jpg?v=9" alt="" aria-hidden="true">
-    <img src="img/Banner.jpg?v=9" alt="" aria-hidden="true">
+    <img src="img/Banner.jpg?v=9" alt="Andreani - Envíos a todo el país" width="1500" height="97" decoding="async">
+    <img src="img/Banner.jpg?v=9" alt="" aria-hidden="true" width="1500" height="97" decoding="async">
+    <img src="img/Banner.jpg?v=9" alt="" aria-hidden="true" width="1500" height="97" decoding="async">
   </div>
 </div>
 
 <header class="site-header">
   <div class="header-inner">
-    <img class="site-logo" src="img/logo.png" alt="logo" onerror="this.style.display='none'">
+    <img class="site-logo" src="img/logo.png" alt="Logo de NOVA Seeds" width="900" height="600" decoding="async" fetchpriority="high" onerror="this.style.display='none'">
   <div id="promo-banner" class="promo-banner">4 Semillas AutoRegular Gratis llevando cualquier blister</div>
     <div class="seed-bonus-strip" aria-label="semillas de regalo">
-      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-1">
-      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-2">
-      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-3">
-      <img src="img/seed-bonus.png" alt="semilla de regalo" class="seed-bonus seed-4">
+      <img src="img/seed-bonus.png" alt="Semilla de regalo" width="90" height="90" decoding="async" class="seed-bonus seed-1">
+      <img src="img/seed-bonus.png" alt="" aria-hidden="true" width="90" height="90" decoding="async" class="seed-bonus seed-2">
+      <img src="img/seed-bonus.png" alt="" aria-hidden="true" width="90" height="90" decoding="async" class="seed-bonus seed-3">
+      <img src="img/seed-bonus.png" alt="" aria-hidden="true" width="90" height="90" decoding="async" class="seed-bonus seed-4">
     </div>
 </div>
 </header>
@@ -34,16 +37,18 @@
 
   <section id="cuadro2" class="carousel-section theme-b">
     <div class="section-head">
-      <h2 class="section-title brand">Genetica Autofloreciente</h2>
+      <h2 class="section-title brand">Genética Autofloreciente</h2>
       <div class="controls"><button id="prevBtn2" aria-label="Anterior">‹</button><button id="nextBtn2" aria-label="Siguiente">›</button></div>
     </div>
-    <div id="carousel2" class="carousel" aria-label="Carrusel exterior"></div>
+    <div id="carousel2" class="carousel" aria-label="Carrusel de productos"></div>
   </section>
   <div class="background-banner">
-  <img src="img/fondo-germinacion.jpg" alt="Fondo germinación" class="background-banner-img">
-  <a href="#" class="bg-banner-cta" aria-label="Ir a guía">Clic Aquí</a>
+  <img src="img/fondo-germinacion.jpg" alt="Fondo germinación" width="1600" height="900" loading="lazy" decoding="async" class="background-banner-img">
+  <a href="https://wa.me/5491100000000?text=Hola%2C%20quiero%20comprar%20un%20blister%20y%20ver%20las%20variedades." class="bg-banner-cta" target="_blank" rel="noopener" aria-label="Pedir por WhatsApp">Pedir por WhatsApp</a>
 </div>
 </main>
+
+<noscript><div style="padding:12px;color:#fff;background:#111;border:1px solid #222;border-radius:12px;margin:12px;">Para ver el catálogo completo, activá JavaScript en tu navegador.</div></noscript>
 
 <!-- modal gallery -->
 <div id="lightbox" class="lightbox" aria-hidden="true">
@@ -54,7 +59,7 @@
   </div>
 </div>
 
-<script src="js/app.js"></script>
+<script src="js/app.js" defer></script>
 
 <!-- WhatsApp Floating Button -->
 <a id="wa-fab" class="wa-fab" href="https://wa.me/5491100000000?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." target="_blank" rel="noopener" aria-label="WhatsApp"></a>
