--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="es">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name="theme-color" content="#000000">
 <meta name="description" content="Semillas de colección en blister. Variedades autoflorecientes. Consultas y pedidos por WhatsApp. Envíos a todo el país.">
 <title>NOVA Seeds - Semillas De Colección</title>
 <link rel="stylesheet" href="css/styles.css">
 <link rel="stylesheet" href="css/banner.css">
 <link rel="preload" href="img/logo.png" as="image" fetchpriority="high">
+<link rel="manifest" href="manifest.webmanifest">
+<link rel="apple-touch-icon" href="img/icon-192.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="NOVA Seeds">
+
 </head>
 <body class="theme-dark">
 <!-- Banner superior -->
@@ -55,6 +62,7 @@
 
 <script src="js/app.js" defer></script>
 
+<script src="js/pwa.js" defer></script>
 <!-- WhatsApp Floating Button -->
 <a id="wa-fab" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." target="_blank" rel="noopener" aria-label="WhatsApp"></a>
 
