--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <section id="cuadro2" class="carousel-section theme-b">
     <div class="section-head">
-      <h2 class="section-title brand">Genética Autofloreciente</h2>
+      <h2 class="section-title brand section-title--split"><span class="title-kicker">Genética</span><span class="title-main">Autofloreciente</span></h2>
       <div class="controls"><button id="prevBtn2" aria-label="Anterior">‹</button><button id="nextBtn2" aria-label="Siguiente">›</button></div>
     </div>
     <div id="carousel2" class="carousel" aria-label="Carrusel de productos"></div>
