--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 <header class="site-header">
   <div class="header-inner">
     <img class="site-logo" src="img/logo.png" alt="Logo de NOVA Seeds" width="900" height="600" decoding="async" fetchpriority="high" onerror="this.style.display='none'">
-  <div id="promo-banner" class="promo-banner">4 Semillas AutoRegular Gratis llevando cualquier blister</div>
 </div>
 </header>
 
@@ -38,7 +37,7 @@
 
   <section id="cuadro2" class="carousel-section theme-b">
     <div class="section-head">
-      <h2 class="section-title brand section-title--split"><span class="title-kicker">Genética</span><span class="title-main">Autofloreciente</span></h2>
+      <h2 class="section-title-mobile">Genética autofloreciente</h2>
       <div class="controls"><button id="prevBtn2" aria-label="Anterior">‹</button><button id="nextBtn2" aria-label="Siguiente">›</button></div>
     </div>
     <div id="carousel2" class="carousel" aria-label="Carrusel de productos"></div>
