--- a/index.html
+++ b/index.html
@@ -1,69 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="es">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-<meta name="theme-color" content="#000000">
-<meta name="description" content="Semillas de colección en blister. Variedades autoflorecientes. Consultas y pedidos por WhatsApp. Envíos a todo el país.">
+<meta charset="utf-8"/>
+<meta content="width=device-width,initial-scale=1,viewport-fit=cover" name="viewport"/>
+<meta content="#000000" name="theme-color"/>
+<meta content="Semillas de colección en blister. Variedades autoflorecientes. Consultas y pedidos por WhatsApp. Envíos a todo el país." name="description"/>
 <title>NOVA Seeds - Semillas De Colección</title>
-<link rel="stylesheet" href="css/styles.css">
-<link rel="stylesheet" href="css/banner.css">
-<link rel="preload" href="img/logo.png" as="image" fetchpriority="high">
-<link rel="manifest" href="manifest.webmanifest">
-<link rel="apple-touch-icon" href="img/icon-192.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="NOVA Seeds">
-
+<link href="css/styles.css" rel="stylesheet"/>
+<link href="css/banner.css" rel="stylesheet"/>
+<link as="image" fetchpriority="high" href="img/logo.png" rel="preload"/>
+<link href="manifest.webmanifest" rel="manifest"/>
+<link href="img/icon-192.png" rel="apple-touch-icon"/>
+<meta content="yes" name="apple-mobile-web-app-capable"/>
+<meta content="yes" name="mobile-web-app-capable"/>
+<meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
+<meta content="NOVA Seeds" name="apple-mobile-web-app-title"/>
 </head>
 <body class="theme-dark">
 <!-- Banner superior -->
-<div class="top-banner" role="region" aria-label="información de envíos">
-  <div class="top-banner__track">
-    <img src="img/Banner.jpg?v=9" alt="Andreani - Envíos a todo el país" width="1500" height="97" decoding="async">
-    <img src="img/Banner.jpg?v=9" alt="" aria-hidden="true" width="1500" height="97" decoding="async">
-    <img src="img/Banner.jpg?v=9" alt="" aria-hidden="true" width="1500" height="97" decoding="async">
-  </div>
+<div aria-label="información de envíos" class="top-banner" role="region">
+<div class="top-banner__track">
+<img alt="Andreani - Envíos a todo el país" decoding="async" height="97" src="img/Banner.jpg?v=9" width="1500"/>
+<img alt="" aria-hidden="true" decoding="async" height="97" src="img/Banner.jpg?v=9" width="1500"/>
+<img alt="" aria-hidden="true" decoding="async" height="97" src="img/Banner.jpg?v=9" width="1500"/>
 </div>
-
+</div>
 <header class="site-header">
-  <div class="header-inner">
-    <img class="site-logo" src="img/logo.png" alt="Logo de NOVA Seeds" width="900" height="600" decoding="async" fetchpriority="high" onerror="this.style.display='none'">
+<div class="header-inner">
+<img alt="Logo de NOVA Seeds" class="site-logo" decoding="async" fetchpriority="high" height="600" onerror="this.style.display='none'" src="img/logo.png" width="900"/>
 </div>
 </header>
-
 <main>
-
-  <section id="cuadro2" class="carousel-section theme-b">
-    <div class="section-head">
-      <h2 class="section-title-mobile">Genética autofloreciente</h2>
-      <div class="controls"><button id="prevBtn2" aria-label="Anterior">‹</button><button id="nextBtn2" aria-label="Siguiente">›</button></div>
-    </div>
-    <div id="carousel2" class="carousel" aria-label="Carrusel de productos"></div>
-  </section>
-  <div class="background-banner">
-  <img src="img/fondo-germinacion.jpg" alt="Fondo germinación" width="1600" height="900" loading="lazy" decoding="async" class="background-banner-img">
-  <a href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20comprar%20un%20blister%20y%20ver%20las%20variedades." class="bg-banner-cta" target="_blank" rel="noopener" aria-label="Pedir por WhatsApp">Pedir por WhatsApp</a>
+<section class="carousel-section theme-b" id="cuadro2">
+<div class="section-head">
+<h2 class="section-title-mobile">Genética autofloreciente</h2>
+<div class="controls"><button aria-label="Anterior" id="prevBtn2">‹</button><button aria-label="Siguiente" id="nextBtn2">›</button></div>
 </div>
+<div aria-label="Carrusel de productos" class="carousel" id="carousel2"></div>
+</section>
+<div class="background-banner">
+<img alt="Fondo germinación" class="background-banner-img" decoding="async" height="650" loading="lazy" src="img/fondo-germinacion.jpg" width="1600"/>
+<a aria-label="Pedir por WhatsApp" class="bg-banner-cta" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20comprar%20un%20blister%20y%20ver%20las%20variedades." rel="noopener" target="_blank">Pedir por WhatsApp</a>
+<a aria-label="Más info: guía de germinación" class="bg-banner-info" href="tutorial.html">Más info</a></div>
 </main>
-
 <noscript><div style="padding:12px;color:#fff;background:#111;border:1px solid #222;border-radius:12px;margin:12px;">Para ver el catálogo completo, activá JavaScript en tu navegador.</div></noscript>
-
 <!-- modal gallery -->
-<div id="lightbox" class="lightbox" aria-hidden="true">
-  <div class="lb-inner">
-    <button id="lb-close" class="lb-close" aria-label="Cerrar">×</button>
-    <img id="lb-img" src="" alt="">
-    <div id="lb-thumbs" class="lb-thumbs"></div>
-  </div>
+<div aria-hidden="true" class="lightbox" id="lightbox">
+<div class="lb-inner">
+<button aria-label="Cerrar" class="lb-close" id="lb-close">×</button>
+<img alt="" id="lb-img" src=""/>
+<div class="lb-thumbs" id="lb-thumbs"></div>
 </div>
-
-<script src="js/app.js" defer></script>
-
-<script src="js/pwa.js" defer></script>
+</div>
+<script defer="" src="js/app.js"></script>
+<script defer="" src="js/pwa.js"></script>
 <!-- WhatsApp Floating Button -->
-<a id="wa-fab" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." target="_blank" rel="noopener" aria-label="WhatsApp"></a>
-
+<a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." id="wa-fab" rel="noopener" target="_blank"></a>
 </body>
 </html>
