--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
 <meta content="NOVA Seeds" name="apple-mobile-web-app-title"/>
 </head>
-<body class="theme-dark">
+<body class="theme-dark home-page">
 <!-- Banner superior -->
 <div aria-label="información de envíos" class="top-banner" role="region">
 <div class="top-banner__track">
@@ -40,7 +40,7 @@
 <div aria-label="Carrusel de productos" class="carousel" id="carousel2"></div>
 </section>
 <div class="background-banner">
-<img alt="Fondo germinación" class="background-banner-img" decoding="async" height="650" loading="lazy" src="img/fondo-germinacion.jpg" width="1600"/>
+<img alt="Fondo germinación" class="background-banner-img" decoding="async" height="650" loading="lazy" src="img/fondo-germinacion.png" width="1600"/>
 <a aria-label="Pedir por WhatsApp" class="bg-banner-cta" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20comprar%20un%20blister%20y%20ver%20las%20variedades." rel="noopener" target="_blank">Pedir por WhatsApp</a>
 <a aria-label="Más info: guía de germinación" class="bg-banner-info" href="tutorial.html">Más info</a></div>
 </main>
