--- a/tutorial.html
+++ b/tutorial.html
@@ -14,7 +14,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
-<body class="theme-dark">
+<body class="theme-dark tutorial-page">
   <header class="site-header">
     <div class="header-inner">
       <img class="site-logo" src="img/logo.png" alt="Logo de NOVA Seeds" decoding="async" loading="eager">
@@ -54,7 +54,7 @@
         <li>Escribinos por WhatsApp y te orientamos.</li>
       </ul>
       <div style="margin-top:12px; text-align:center;">
-        <a class="bg-banner-cta" style="position:static; transform:none; display:inline-block;" href="https://wa.me/5491158768929?text=Hola%2C%20tengo%20una%20consulta%20sobre%20germinaci%C3%B3n." target="_blank" rel="noopener" aria-label="Consultar por WhatsApp">Consultar por WhatsApp</a>
+        <a class="tutorial-cta" href="https://wa.me/5491158768929?text=Hola%2C%20tengo%20una%20consulta%20sobre%20germinaci%C3%B3n." target="_blank" rel="noopener" aria-label="Consultar por WhatsApp">Consultar por WhatsApp</a>
       </div>
     </section>
   </main>
