--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 </section>
 <div class="background-banner">
 <img alt="Fondo germinación" class="background-banner-img" decoding="async" height="650" loading="lazy" src="img/fondo-germinacion.png" width="1600"/>
-<a aria-label="Pedir por WhatsApp" class="bg-banner-cta" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20comprar%20un%20blister%20y%20ver%20las%20variedades." rel="noopener" target="_blank">Pedir por WhatsApp</a>
 <a aria-label="Más info: guía de germinación" class="bg-banner-info" href="tutorial.html">Más info</a></div>
 </main>
 <noscript><div style="padding:12px;color:#fff;background:#111;border:1px solid #222;border-radius:12px;margin:12px;">Para ver el catálogo completo, activá JavaScript en tu navegador.</div></noscript>
@@ -56,6 +55,15 @@
 <script defer="" src="js/app.js"></script>
 <script defer="" src="js/pwa.js"></script>
 <!-- WhatsApp Floating Button -->
+<a class="wa-toast" aria-label="Pedir por WhatsApp" href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20hacer%20un%20pedido%20o%20consultar%20por%20variedades." rel="noopener" target="_blank">
+  <span class="wa-toast__icon" aria-hidden="true">
+    <svg viewBox="0 0 24 24" width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M20 15.5c0 1.38-1.12 2.5-2.5 2.5H8l-4 3v-3H6.5C5.12 18 4 16.88 4 15.5v-8C4 6.12 5.12 5 6.5 5h11C18.88 5 20 6.12 20 7.5v8Z" fill="white" opacity="0.95"/>
+      <path d="M8 10.2h8M8 13h5.2" stroke="#25D366" stroke-width="2" stroke-linecap="round"/>
+    </svg>
+  </span>
+  <span class="wa-toast__text">Pedir por WhatsApp</span>
+</a>
 <a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." id="wa-fab" rel="noopener" target="_blank"></a>
 </body>
 </html>
