--- a/index.html
+++ b/index.html
@@ -42,6 +42,30 @@
 <div class="background-banner">
 <img alt="Fondo germinación" class="background-banner-img" decoding="async" height="650" loading="lazy" src="img/fondo-germinacion.png" width="1600"/>
 <a aria-label="Más info: guía de germinación" class="bg-banner-info" href="tutorial.html">Más info</a></div>
+
+
+<section class="delivery-section" id="entregas">
+  <h3 class="delivery-title">Entregas personales</h3>
+  <p class="delivery-text">
+    Coordinamos la entrega por WhatsApp. Zona: <strong>Almagro (CABA)</strong>.
+    Consultá día y horario disponibles.
+  </p>
+
+  <div class="delivery-map" aria-label="Mapa de la zona de Almagro">
+    <iframe
+      class="delivery-map-frame"
+      title="Mapa de Almagro"
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+      src="https://www.google.com/maps?q=Almagro%2C%20CABA&output=embed">
+    </iframe>
+  </div>
+
+  <a class="delivery-map-link" href="https://share.google/aTvnKdci49puncguC" target="_blank" rel="noopener">
+    Ver el mapa completo
+  </a>
+</section>
+
 </main>
 <noscript><div style="padding:12px;color:#fff;background:#111;border:1px solid #222;border-radius:12px;margin:12px;">Para ver el catálogo completo, activá JavaScript en tu navegador.</div></noscript>
 <!-- modal gallery -->
