--- a/index.html
+++ b/index.html
@@ -39,13 +39,28 @@
 </div>
 <div aria-label="Carrusel de productos" class="carousel" id="carousel2"></div>
 </section>
-<div class="background-banner">
-<img alt="Fondo germinación" class="background-banner-img" decoding="async" height="650" loading="lazy" src="img/fondo-germinacion.png" width="1600"/>
-<a aria-label="Más info: guía de germinación" class="bg-banner-info" href="tutorial.html">Más info</a></div>
+<section class="guide-section" id="guia">
+  <div class="guide-head">
+    <h3 class="guide-title">Guía de germinación</h3>
+    <a class="guide-link" href="tutorial.html" aria-label="Abrir guía de germinación">Ver guía</a>
+  </div>
 
+  <div class="background-banner">
+    <img alt="Guía de germinación" class="background-banner-img" decoding="async" loading="lazy" src="img/fondo-germinacion.png" width="1600" height="450"/>
+    <a aria-label="Más info: guía de germinación" class="bg-banner-info" href="tutorial.html">Más info</a>
+  </div>
+
+  <p class="guide-text">Tutorial completo y paso a paso. Si tenés dudas, escribinos por WhatsApp.</p>
+</section>
+
+<div class="section-divider" role="separator" aria-hidden="true"></div>
 
 <section class="delivery-section" id="entregas">
-  <h3 class="delivery-title">Entregas personales</h3>
+  <div class="delivery-head">
+    <h3 class="delivery-title">Entregas personales</h3>
+    <a class="delivery-map-link" href="https://share.google/aTvnKdci49puncguC" target="_blank" rel="noopener">Ver mapa</a>
+  </div>
+
   <p class="delivery-text">
     Coordinamos la entrega por WhatsApp. Zona: <strong>Almagro (CABA)</strong>.
     Consultá día y horario disponibles.
@@ -57,13 +72,8 @@
       title="Mapa de Almagro"
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
-      src="https://www.google.com/maps?q=Almagro%2C%20CABA&output=embed">
-    </iframe>
+      src="https://www.google.com/maps?q=Almagro%2C%20CABA&output=embed"></iframe>
   </div>
-
-  <a class="delivery-map-link" href="https://share.google/aTvnKdci49puncguC" target="_blank" rel="noopener">
-    Ver el mapa completo
-  </a>
 </section>
 
 </main>
