--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 </div>
 <div aria-label="Carrusel de productos" class="carousel" id="carousel2"></div>
 </section>
+
+<div class="section-divider" role="separator" aria-hidden="true"></div>
+
+
 <section class="guide-section" id="guia">
   <div class="guide-head">
     <h3 class="guide-title">Guía de germinación</h3>
@@ -47,8 +51,7 @@
 
   <div class="background-banner">
     <img alt="Guía de germinación" class="background-banner-img" decoding="async" loading="lazy" src="img/fondo-germinacion.png" width="1600" height="450"/>
-    <a aria-label="Más info: guía de germinación" class="bg-banner-info" href="tutorial.html">Más info</a>
-  </div>
+</div>
 
   <p class="guide-text">Tutorial completo y paso a paso. Si tenés dudas, escribinos por WhatsApp.</p>
 </section>
