--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <meta content="Semillas de colección en blister. Variedades autoflorecientes. Consultas y pedidos por WhatsApp. Envíos a todo el país." name="description"/>
 <title>NOVA Seeds - Semillas De Colección</title>
 <link href="css/styles.css" rel="stylesheet"/>
-<link href="css/banner.css" rel="stylesheet"/>
 <link as="image" fetchpriority="high" href="img/logo.png" rel="preload"/>
 <link href="manifest.webmanifest" rel="manifest"/>
 <link href="img/icon-192.png" rel="apple-touch-icon"/>
@@ -19,13 +18,6 @@
 </head>
 <body class="theme-dark home-page">
 <!-- Banner superior -->
-<div aria-label="información de envíos" class="top-banner" role="region">
-<div class="top-banner__track">
-<img alt="Andreani - Envíos a todo el país" decoding="async" height="97" src="img/Banner.jpg?v=9" width="1500"/>
-<img alt="" aria-hidden="true" decoding="async" height="97" src="img/Banner.jpg?v=9" width="1500"/>
-<img alt="" aria-hidden="true" decoding="async" height="97" src="img/Banner.jpg?v=9" width="1500"/>
-</div>
-</div>
 <header class="site-header">
 <div class="header-inner">
 <img alt="Logo de NOVA Seeds" class="site-logo" decoding="async" fetchpriority="high" height="600" onerror="this.style.display='none'" src="img/logo.png" width="900"/>
@@ -53,8 +45,7 @@
     <img alt="Guía de germinación" class="background-banner-img" decoding="async" loading="lazy" src="img/fondo-germinacion.png" width="1600" height="450"/>
 </div>
 
-  <p class="guide-text">Tutorial completo y paso a paso. Si tenés dudas, escribinos por WhatsApp.</p>
-</section>
+  </section>
 
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
@@ -77,6 +68,13 @@
       referrerpolicy="no-referrer-when-downgrade"
       src="https://www.google.com/maps?q=Almagro%2C%20CABA&output=embed"></iframe>
   </div>
+</section>
+
+<div class="section-divider" role="separator" aria-hidden="true"></div>
+
+<section class="shipping-section" id="envios">
+  <h3 class="shipping-title">También hacemos envíos a todo el país por Andreani</h3>
+  <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
 </section>
 
 </main>
