--- a/tutorial.html
+++ b/tutorial.html
@@ -37,13 +37,17 @@
       </ul>
     </section>
 
-    <section class="tutorial-card">
-      <h3>Paso a paso (borrador)</h3>
-      <ul>
-        <li>Humedecer sin encharcar.</li>
-        <li>Mantener en un lugar oscuro y templado.</li>
-        <li>Revisar 1–2 veces por día.</li>
-        <li>Trasplantar cuando asome la raíz.</li>
+    <section class="tutorial-card tutorial-light">
+      <h3>La Temperatura De Germinación Juega Un Papel Crucial</h3>
+      <img class="tutorial-img" src="img/00.png" alt="Rangos de temperatura para germinación" loading="lazy" decoding="async">
+      <p>Antes de saltar directamente a los métodos de germinación, hay un par de reglas de oro de germinación. Para obtener los mejores resultados, recomendamos mantenerse dentro de estas pautas, sin importar cómo elija germinar. Dicho esto, de todos los factores a considerar, la temperatura es una de las más críticas. Las semillas siempre buscarán incluso la menor cantidad de humedad, pero utilizan la temperatura como una señal de que necesitan hacerlo.</p>
+      <ul class="tutorial-bullets">
+        <li>La temperatura ideal está entre 22° y 25°C (71–77°F)</li>
+        <li>Su entorno de crecimiento debe ser húmedo/húmedo, pero nunca mojado</li>
+        <li>El rango de humedad relativo debe estar entre el 70% y el 90%</li>
+        <li>Las semillas favorecen la iluminación fluorescente (Coode blanco frío 33)</li>
+        <li>Minimice la cantidad de manejo de semillas que hace</li>
+        <li>En los tapones hidropónicos / de lana de roca, el valor de pH ideal es de 5.8 a 6.2</li>
       </ul>
     </section>
 
